--- a/mods/radiant-gear.pw.toml
+++ b/mods/radiant-gear.pw.toml
@@ -1,13 +1,13 @@
 name = "Radiant Gear (Fabric/Forge/Quilt)"
-filename = "curiouslights-forge-1.3.0+1.18.2.jar"
+filename = "radiantgear-forge-2.0.1+1.19.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "5aa5a485404111f51e1ab5d2de2047f830af5822"
+hash = "e68b01409703105448108978804f398dbc6031c4"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4026561
+file-id = 4325449
 project-id = 602199
