--- a/mods/shulker-box-slot.pw.toml
+++ b/mods/shulker-box-slot.pw.toml
@@ -1,13 +1,13 @@
 name = "Shulker Box Slot (Forge)"
-filename = "curiousshulkerboxes-forge-1.18.1-4.2.0.0.jar"
+filename = "shulkerboxslot-forge-5.0.0-beta.2+1.19.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "6548bff1bf146c8263e9e54d46be8dfd3712d6c3"
+hash = "11330331f2f14d6cc4bc02d3a9b1219ea0b423bd"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3568547
+file-id = 3965294
 project-id = 316881
