--- a/mods/just-enough-professions-jep.pw.toml
+++ b/mods/just-enough-professions-jep.pw.toml
@@ -1,13 +1,13 @@
 name = "Just Enough Professions (JEP)"
-filename = "JustEnoughProfessions-1.18.2-1.3.0.jar"
+filename = "JustEnoughProfessions-forge-1.19.3-2.1.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "f012aa7eedcf32c314daa08bec01d4c2ae4be329"
+hash = "0e32a426ed4e4d8b0942abb813c4a9ad3321c12f"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4095825
+file-id = 4348553
 project-id = 417645
