--- a/mods/chisels-bits.pw.toml
+++ b/mods/chisels-bits.pw.toml
@@ -1,13 +1,13 @@
 name = "Chisels & Bits - For Forge"
-filename = "chisels-and-bits-forge-1.3.126.jar"
+filename = "ChiselsBits-forge-1.18.2-1.2.116-universal.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "956274a9cd37f132f99e46ca011527d9bf7eb100"
+hash = "5361d4010f90a32d9a0341d34537b06e02b42b99"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4357361
+file-id = 4119191
 project-id = 231095
