--- a/mods/choicetheorems-overhauled-village.pw.toml
+++ b/mods/choicetheorems-overhauled-village.pw.toml
@@ -1,13 +1,13 @@
 name = "ChoiceTheorem's Overhauled Village"
-filename = "ctov-3.1.4.jar"
+filename = "[Universal]CTOV-v2-9-2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "fff0bc8d60474625fe0b93def173f412b33e29a1"
+hash = "f33ecdbe388e36fe22301819f4638e17d9a4b028"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4131787
+file-id = 4000676
 project-id = 623908
