--- a/mods/comforts.pw.toml
+++ b/mods/comforts.pw.toml
@@ -1,13 +1,13 @@
 name = "Comforts (Fabric/Forge/Quilt)"
-filename = "comforts-forge-6.1.1+1.19.3.jar"
+filename = "comforts-forge-1.18.2-5.0.0.5.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "0693572bdcfaf82135235ae589a17121bd8fbf59"
+hash = "f825b9a4742561423fc28f1c7798fdb5885fbc86"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4328684
+file-id = 4019552
 project-id = 276951
