--- a/mods/elytra-slot.pw.toml
+++ b/mods/elytra-slot.pw.toml
@@ -1,13 +1,13 @@
 name = "Elytra Slot (Forge)"
-filename = "elytraslot-forge-6.0.0+1.19.2.jar"
+filename = "curiouselytra-forge-1.18.1-5.0.1.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "da3f14419b5faf1261bb47ac94a348e412b862f3"
+hash = "3cef56e74a33672b5112bcb04e7bf2486d9e9f01"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3929276
+file-id = 3601975
 project-id = 317716
