--- a/mods/entityculling.pw.toml
+++ b/mods/entityculling.pw.toml
@@ -1,13 +1,13 @@
 name = "Entity Culling Fabric/Forge"
-filename = "entityculling-forge-1.5.2-mc1.19.3.jar"
+filename = "entityculling-forge-mc1.18-1.5.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "da4636592c7d7b5dfd1f72fabf1401486c78b124"
+hash = "fbf6368cd26d878ce3d75e899f039a1e51fa49a3"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4153794
+file-id = 3743929
 project-id = 448233
