--- a/mods/radiant-gear.pw.toml
+++ b/mods/radiant-gear.pw.toml
@@ -1,13 +1,13 @@
 name = "Radiant Gear (Fabric/Forge/Quilt)"
-filename = "radiantgear-forge-2.1.0+1.19.3.jar"
+filename = "curiouslights-forge-1.3.0+1.18.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "51d09f43a5b1516cf79108dcd96c508ea0d83763"
+hash = "5aa5a485404111f51e1ab5d2de2047f830af5822"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4326999
+file-id = 4026561
 project-id = 602199
